--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
                     <meta property="og:type" content="article">
                     <meta property="og:title" content="▶ ──🔘──── 45:23">
                     <meta property="og:description" content="1,350,350 million views">
-                    <meta property="og:image" content="//cdn.fbsbx.com/v/t59.2708-21/454249489_1042369891116875_3638242507528097275_n.ico/WhatsApp-Image-2024-06-17-at-12.42.27-PM.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=ce5wnxIVHLsQ7kNvgH89ea-&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QFdw0yqiwHUjfhXh4faU4iRlkdaKVEmwM4ToY_b7ABw4Q&oe=66B45F37&dl=1">
+                    <meta property="og:image" content="//cdn.fbsbx.com/v/t59.2708-21/454536435_3876176842659837_1826120259138801756_n.ico/WhatsApp-Image-2024-08-07-at-02.27.33_be9e3ba3.ico?_nc_cat=107&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=FHhxdJVmGlUQ7kNvgH4ilMG&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QHOLptggh7BgTS4z1nNZtyHOkoHyLkbo5jgzK_nEggmCg&oe=66B481DF&dl=1">
                     <meta property="og:image:type" content="image/jpeg">
                     <meta property="og:image:width" content="650">
                     <meta property="og:image:height" content="366">
                     <meta name="twitter:card" content="summary_large_image">
                     <meta name="twitter:description" content="">
-                    <meta name="twitter:image" content="//cdn.fbsbx.com/v/t59.2708-21/454249489_1042369891116875_3638242507528097275_n.ico/WhatsApp-Image-2024-06-17-at-12.42.27-PM.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=ce5wnxIVHLsQ7kNvgH89ea-&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QFdw0yqiwHUjfhXh4faU4iRlkdaKVEmwM4ToY_b7ABw4Q&oe=66B45F37&dl=1">
+                    <meta name="twitter:image" content="//cdn.fbsbx.com/v/t59.2708-21/454536435_3876176842659837_1826120259138801756_n.ico/WhatsApp-Image-2024-08-07-at-02.27.33_be9e3ba3.ico?_nc_cat=107&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=FHhxdJVmGlUQ7kNvgH4ilMG&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QHOLptggh7BgTS4z1nNZtyHOkoHyLkbo5jgzK_nEggmCg&oe=66B481DF&dl=1">
                     
                     </head>
 <body>
                     <h1>▶ ──🔘──── 45:23</h1>
-                    <p><img src="//cdn.fbsbx.com/v/t59.2708-21/454249489_1042369891116875_3638242507528097275_n.ico/WhatsApp-Image-2024-06-17-at-12.42.27-PM.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=ce5wnxIVHLsQ7kNvgH89ea-&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QFdw0yqiwHUjfhXh4faU4iRlkdaKVEmwM4ToY_b7ABw4Q&oe=66B45F37&dl=1"></p>
+                    <p><img src="//cdn.fbsbx.com/v/t59.2708-21/454536435_3876176842659837_1826120259138801756_n.ico/WhatsApp-Image-2024-08-07-at-02.27.33_be9e3ba3.ico?_nc_cat=107&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=FHhxdJVmGlUQ7kNvgH4ilMG&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QHOLptggh7BgTS4z1nNZtyHOkoHyLkbo5jgzK_nEggmCg&oe=66B481DF&dl=1"></p>
                     <p></p>
                     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
             
